# dati3d-homework

HW1/: .cproject  .project  CMakeLists.txt  calibration.cpp  calibration.h  disparity.cpp  input_photo_dx.txt  input_photo_sx.txt  io.cpp  io.h  main.cpp  mypointcloud.cpp  mypointcloud.h  relazione.docx  relazione.odt
HW1/disparity/: left.ppm  right.ppm
HW1/include/: disparity.h
HW1/input/: input_photo_dx.txt
HW1/result/: disparity.ppm  range.ppm  rectfyLeft.ppm  rectfyRight.ppm  undistortLeft.ppm  undistortRight.ppm
HW1/src/: CMakeLists.txt  calibration.cpp
HW1/value/: D0.yml  D1.yml  E.yml  F.yml  M0.yml  M1.yml  P0.yml  P1.yml  Q.yml  R0.yml  R1.yml  RR.yml  T.yml
HW2/: CMakeLists.txt  relazione.docx
HW2/include/: cloud_io.h  extract_object.h  my_datatype.h  mypointcloud.h  ref_cloud.h  registration.h  utils.h
HW2/src/: cloud_io.cpp  extract_object.cpp  main.cpp  mypointcloud.cpp  ref_cloud.cpp  registration.cpp  utils.cpp
